--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Video(game) Vixens</title> 
-    
+    <meta name="viewport" content="width=device-width, initial-scale">
+    <title>Video(game) Vixens</title>
 </head>
+<header class="">
+    <div class=""></div>
+</header>
 <body>
-    <h1></h1> 
+    <div class="">
+
+    </div>
+    <div id = "wrapper"></div>
+    <h1>Video Game Vixens</h1> 
+    <h2>Ready For Your Next Quest?</h2>
+    <button id = "search">
+    <h3>Find Your Next Game Here</h3>
+    </button>
     <p>This is a basic HTML structure.</p> 
 </body>
 </html>
+<link rel="stylesheet" href=".assets/style.css">
+<script src="script.js"></script>
