--- a/index.html
+++ b/index.html
@@ -5,32 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale">
     <title>Videogame Vixens</title>
-    <link rel="stylesheet" type="text/css" href=".assets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assets/style.css">
 </head>
 <body>
-    <h1>Videogame Vixens</h1>
-    <h2>Free to Play</h2>
-    <nav>
-        <ul>
-            <li><a href="#" id="platform1">Nintendo Switch</a></li>
-            <li><a href="#" id="platform2">PC</a></li>
-            <li><a href="#" id="platform3">Playstation</a></li>
-            <li><a href="#" id="platform3">Xbox</a></li>
-        </ul>
-        <banner>Ready for your next quest?</banner>
-    </nav>
-    <div id="filter">
-        <button id="sortFilterBtn">Sort & Filter</button>
-        <select id="genreDropdown">
-            <option value="action">Action</option>
-            <option value="adventure">Adventure</option>
-            <option value="strategy">Strategy</option>
-            <!-- Add more genres as needed -->
-        </select>
-    </div>
-    <div id="gameList">
-        <!-- Display games here -->
-    </div>
-    <script src="./assets/script.js"></script>
-</body>
+    <div class="header">
+        <div class="title">
+            <h1>Videogame Vixens</h1>
+            <h2>Free to Play</h2>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#" id="platform1">Nintendo Switch</a></li>
+                <li><a href="#" id="platform2">PC</a></li>
+                <li><a href="#" id="platform3">Playstation</a></li>
+                <li><a href="#" id="platform4">Xbox</a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <img src="./assets/images/game-console1.png" width = 100%>
+        </div>
+
+
 </html>
