--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
             </ul>
         </nav>
         <div class="banner">
-            <img src="./assets/images/game-console1.png" width = 100%>
+            <img src="./Assets/images/console-message-removebg-preview.png" width = 50%>
+            <div id="filter">
+                <button id="sortFilterBtn">Sort & Filter</button>
+                <select id="genreDropdown">
+                    <option value="action">Action</option>
+                    <option value="adventure">Adventure</option>
+                    <option value="strategy">Strategy</option>
+                   // Add Genres
+                </select>
+            </div>
+            <div id="gameList">
+                Games/Images Here
+            </div>
+            <script src="./assets/script.js"></script>
+        </body>
         </div>
+
 
 
 </html>
