Added button tags to html & CSS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,10 +17,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#" id="platform1">Nintendo Switch</a></li>
-                <li><a href="#" id="platform2">PC</a></li>
-                <li><a href="#" id="platform3">Playstation</a></li>
-                <li><a href="#" id="platform4">Xbox</a></li>
+                <li><button id="console1">PC</button></li>
+                <li><button id="console2">Playstation</button></li>
+                <li><button id="console3">Xbox</button></li>
             </ul>
         </nav>
         <div class="banner">
