Added console-specific JS files, updated JS, CSS, HTML for images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="banner">
             <img src="./Assets/images/console-message-removebg-preview.png" width = 50%>
-            <div id="filter">
+            <!-- <div id="filter">
                 <button id="sortFilterBtn">Sort & Filter</button>
                 <select id="genreDropdown">
                     <option value="action">Action</option>
@@ -32,14 +32,19 @@
                     <option value="strategy">Strategy</option>
                    // Add Genres
                 </select>
+            </div> -->
+
+            <h3>Explore New Horizons</h3>
+            <div class ="image" id="imageContainer">
+                <!-- Media files will be displayed here -->
             </div>
-            <div id="gameList">
-                Games/Images Here
-            </div>
-            <script src="./assets/script.js"></script>
+
+
+            
+            <script src="./assets/JS/script.js"></script>
+            <script src="./assets/JS/media-script.js"></script>
+            <script src="./assets/JS/PC-JS/script.js"></script>
+            <script src="./assets/JS/PS-JS/script.js"></script>
+            <script src="./assets/JS/XBOX-JS/script.js"></script>
         </body>
-        </div>
-
-
-
 </html>
