Created internal images folders for consoles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <img src="./Assets/images/console-message-removebg-preview.png" width = 50%>
+            <img src="./Assets/Images/Misc./console-message-removebg-preview.png" width = 50%>
             <!-- <div id="filter">
                 <button id="sortFilterBtn">Sort & Filter</button>
                 <select id="genreDropdown">
