Deleted and modified files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Videogame Vixens</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/style.css">
+    <link rel="stylesheet" type="text/css" href="./Assets/CSS/style.css">
 </head>
 <body>
     <div class="header">
@@ -16,34 +16,20 @@
         </div>
         <nav>
             <ul>
-                <li><button id="console1">PC</button></li>
-                <li><button id="console2">Playstation</button></li>
-                <li><button id="console3">Xbox</button></li>
+                <li><button id="new-games">New Games</button></li>
+                <li><button id="new-music">New Music</button></li>
             </ul>
         </nav>
         <div class="banner">
             <img src="./Assets/Images/Misc./console-message-removebg-preview.png" width = 50%>
-            <!-- <div id="filter">
-                <button id="sortFilterBtn">Sort & Filter</button>
-                <select id="genreDropdown">
-                    <option value="action">Action</option>
-                    <option value="adventure">Adventure</option>
-                    <option value="strategy">Strategy</option>
-                   // Add Genres
-                </select>
-            </div> -->
-
             <h3>Explore New Horizons</h3>
             <div class ="image" id="imageContainer">
                 <!-- Media files will be displayed here -->
             </div>
-
-
-            
+                <!--Media files for potential music displayed here-->
             <script src="./assets/JS/script.js"></script>
             <script src="./assets/JS/media-script.js"></script>
-            <script src="./assets/JS/PC-JS/script.js"></script>
-            <script src="./assets/JS/PS-JS/script.js"></script>
-            <script src="./assets/JS/XBOX-JS/script.js"></script>
+            <script src="./assets/JS/Games-JS/script.js"></script>
+            <script src="./assets/JS/Music-JS/script.js"></script>
         </body>
 </html>
