Added music modal to HTML, CSS, JS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         <nav>
             <ul>
                 <li><button id="new-games">New Games</button></li>
-                <li><button id="new-music">New Music</button></li>
+                <li> <button id="new-music-button">New Music</button></li>
+                <!-- Music Modal -->
+                <div id="musicModal" class="modal">
+                     <!-- Modal content -->
+                <div class="music-modal-content">
+                    <span class="close">&times;</span>
+                    <p>New Game? New Background Music!</p>
+                </div>
+
+</div>
             </ul>
         </nav>
         <div class="banner">
