--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale">
+    <meta name="viewport" content="width=device-width">
     <title>Videogame Vixens</title>
-    <link rel="stylesheet" href="src/skeleton.css">
-    <link rel="stylesheet" href="src/normalize.css">
+    <link rel="stylesheet" href="./assets/css/src/skeleton.css">
+    <link rel="stylesheet" href="./assets/css/src/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./Assets/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <ul>
-                <li><button id="new-games">New Games</button></li>
+                <li><button id="newgames">New Games</button></li>
                 <li> <button id="new-music-button">New Music</button></li>
                 <!-- Music Modal -->
                 <div id="musicModal" class="modal">
@@ -38,7 +38,6 @@
                 <!-- Media files will be displayed here -->
             </div>
                 <!--Media files for potential music displayed here-->
-            <script src="./assets/JS/script.js"></script>
             <script src="./assets/JS/media-script.js"></script>
             <script src="./assets/JS/Games-JS/script.js"></script>
             <script src="./assets/JS/Music-JS/script.js"></script>
