--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Videogame Vixens</title>
-    <link rel="stylesheet" href="./assets/css/src/skeleton.css">
-    <link rel="stylesheet" href="./assets/css/src/normalize.css">
+    <link rel="stylesheet" href="./Assets/css/src/skeleton.css">
+    <link rel="stylesheet" href="./Assets/css/src/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css">
 </head>
 <body>
     <div class="header">
@@ -48,8 +48,8 @@
                 <!-- Media files will be displayed here -->
             </div>
                 <!--Media files for potential music displayed here-->
-            <script src="./assets/JS/media-script.js"></script>
-            <script src="./assets/JS/Games-JS/script.js"></script>
-            <script src="./assets/JS/Music-JS/script.js"></script>
+            <script src="./Assets/JS/media-script.js"></script>
+            <script src="./Assets/JS/Games-JS/script.js"></script>
+            <script src="./Assets/JS/Music-JS/script.js"></script>
         </body>
 </html>
