Updated more errors

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Videogame Vixens</title>
-    <link rel="stylesheet" href="./Assets/css/src/skeleton.css">
-    <link rel="stylesheet" href="./Assets/css/src/normalize.css">
+    <link rel="stylesheet" href="./Assets/CSS/src/skeleton.css">
+    <link rel="stylesheet" href="./Assets/CSS/src/normalize.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./Assets/CSS/style.css">
 </head>
 <body>
     <div class="header">
@@ -42,7 +42,7 @@
             </ul>
         </nav>
         <div class="banner">
-            <img src="./Assets/Images/Misc./console-message-removebg-preview.png" width = 50%>
+            <img src="./Assets/images/Misc./console-message-removebg-preview.png" width = 50%>
             <h3>Explore New Horizons</h3>
             <div class ="image" id="imageContainer">
                 <!-- Media files will be displayed here -->
