Changed to New Games

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header">
         <div class="title">
             <h1>Videogame Vixens</h1>
-            <h2>Free to Play</h2>
+            <h2>New Games</h2>
         </div>
         <nav>
             <ul>
