Fixed favorites section in Games-JSfile

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <span class="exit" id="closeModalBtn">&times;</span>
                         <h2>Find New Games Released Here</h2>
                         <div id="gamesList"></div>
+                        <div id="favoriteGamesList"></div>
                         <button id="loadMoreBtn">Load More Games</button>
                     </div>
                 </div>
